<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Citizen Complaint</string>
    <string-array name="basic_items">
        <item>Water</item>
        <item>Law and Order</item>
        <item>Electricity</item>
        <item>Transportation</item>
        <item>Road</item>
        <item>Sewage</item>
    </string-array>
    <string-array name="basic_items_vals">
        <item>water</item>
        <item>lawandorder</item>
        <item>electricity</item>
        <item>transportation</item>
        <item>road</item>
        <item>sewage</item>
    </string-array>
    <string-array name="basic_items_index">
        <item>48</item>
        <item>53</item>
        <item>49</item>
        <item>52</item>
        <item>51</item>
        <item>50</item>
    </string-array>
    <string-array name="lawandorder">
        <item>No close by police station in my area.</item>
        <item>Rowdiness is on the rise in the neighbourhood.</item>
        <item>My area feels very insecure.</item>
        <item>Judgements are being dragged for long, improve the judiciary.</item>
        <item>Police station not well maintained, gives gloomy feeling.</item>
        <item>Court compounds not well maintained.</item>
        <item>Police station staff not co-operative.</item>
        <item>Quality of lawyers deteriorating</item>
        <item>Courts are becoming totally unaffordable, do something.</item>
        <item>Increase constable/Inspector salary, bribery is rising.</item>
        <item>Police is not working hard enough to reach to people.</item>
        <item>High level of distrust on police.</item>
        <item>Should not be there a police awareness day, once in 3 months, where citizen should be encouraged to review
            their police stations, if they are
            happy with services of staff.
        </item>
        <item>Court system sucks, i want to bow out of contract of signing the constitution.</item>
        <item>Should not there be a court awareness day, once in 3 months, where citizens should be encouraged to review
            their courts, to check that they are
            happy with services of the staff.
        </item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="lawandorder_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>11</item>
        <item>12</item>
        <item>21</item>
        <item>22</item>
        <item>31</item>
        <item>32</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>0</item>
    </string-array>
    <string-array name="water">
        <item>No municipality water in this area.</item>
        <item>We have to heavily rely on tankers for water supply, please look into it.</item>
        <item>Water pipes leaking all over the place, water contamination danger looming.</item>
        <item>Municipality water tastes bad/oily.</item>
        <item>Water department staff very rude.</item>
        <item>Water department staff totally outdated..Stoneage.</item>
        <item>Water bills are too high.</item>
        <item>Water becoming totally unaffordable.</item>
        <item>Don\'t know how water come to the city, please launch a water awareness day.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="water_index">
        <item>1</item>
        <item>2</item>
        <item>11</item>
        <item>12</item>
        <item>21</item>
        <item>22</item>
        <item>31</item>
        <item>32</item>
        <item>41</item>
        <item>0</item>
    </string-array>
    <string-array name="electricity">
        <item>Enough these power cuts, increase power generation capacity.</item>
        <item>No 24x7 power in my area.</item>
        <item>Power stations and transformers not well maintained, making my area look dirty.</item>
        <item>Transformers unprotected. Blast every now and then.</item>
        <item>Power lines are hanging too low in my neighbourhood.</item>
        <item>Electricity department staffs are rude.</item>
        <item>Electricity department staff totally outdated..Stoneage.</item>
        <item>Power too costly, totally unaffordable, reduce prices.</item>
        <item>No initiative from power department on educating customer.</item>
        <item>Why we do not have electricity awareness day, I want to know what I pay for.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="electricity_index">
        <item>1</item>
        <item>2</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>21</item>
        <item>22</item>
        <item>31</item>
        <item>41</item>
        <item>42</item>
        <item>0</item>
    </string-array>
    <string-array name="transportation">
        <item>No public buses on this route.</item>
        <item>No public buses in my area.</item>
        <item>Traffic Congestion too much we need metro tracks.</item>
        <item>Public buses not sufficient.</item>
        <item>This point has become congestion hot-spot do something.</item>
        <item>Public buses not clean.</item>
        <item>Upgrade public buses with wifi</item>
        <item>Auto-rickshaw refusal menace here</item>
        <item>Public buses conductor being rude.</item>
        <item>Auto-rickshaw misbehavior menace here.</item>
        <item>Please have a training programme before giving auto licenses.</item>
        <item>Auto-rickshaw not following meters...overcharging.</item>
        <item>Reduce public bus fare.</item>
        <item>Citizen want to know how bus system work please launch a awareness campaign.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="transportation_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>11</item>
        <item>12</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>31</item>
        <item>32</item>
        <item>41</item>
        <item>0</item>
    </string-array>
    <string-array name="road">
        <item>What will we do without roads, no roads here, city sucks.</item>
        <item>No roads in my area.</item>
        <item>There are potholes everywhere on this road.</item>
        <item>Road is in bad shape.</item>
        <item>These Roads are dirty all the time, do somethings.</item>
        <item>Road tax too much.</item>
        <item>How these road tenders get allocated, as citizen we need to know, please launch a awareness programme.
        </item>
        <item>No cleanliness, launch an awareness programme on how citizens can help.</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="road_index">
        <item>1</item>
        <item>2</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>31</item>
        <item>41</item>
        <item>42</item>
        <item>0</item>
    </string-array>
    <string-array name="sewage">
        <item>No Sewage pipe in my area.</item>
        <item>No close by municipality garbage truck in my area.</item>
        <item>Please increase the garbage truck capacity.</item>
        <item>Sewage is over flowing everywhere.</item>
        <item>Lot of manholes left open.</item>
        <item>Lot of garbage is left unaddressed.</item>
        <item>My surrounding has become a garbage yard, please take care of it.</item>
        <item>Garbage has made environment like hell, is this the city we dreamt of.</item>
        <item>Sewage/Sanitation department staff very rude.</item>
        <item>Sewage/Sanitation department staff totally outdated..Stoneage</item>
        <item>Sewage charges are too much.</item>
        <item>Streets are dirty all the time, please launch awareness programme. Explain how citizens can help</item>
        <item>@string/otherTypeOfComplaint</item>
    </string-array>
    <string-array name="sewage_index">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>21</item>
        <item>22</item>
        <item>31</item>
        <item>41</item>
        <item>0</item>
    </string-array>
    <string name="otherTypeOfComplaint">Other complaints..</string>
    <string name="action_label_rate_us">Rate us</string>
    <string name="action_label_settings">Settings</string>
    <string name="governanceMessage">Together we deliver governance. Sarvajan Hitay, Sarvajan Sukhay</string>
    <string name="thankYouMessage">Thank you for contacting us. We will soon look into the matter.</string>
    <string name="issueType">Category:</string>
    <string name="systemLevel">System Level:</string>
    <string name="complaintText">Actual Text:</string>
    <string name="latLong">Latitude/Longitude:</string>
    <string name="complaintAddress">Address:</string>
    <string name="mlaPicDescription">Pic of MLA of the area</string>
    <string name="lackOfInfrastructure">Lack Of Infrastructure</string>
    <string name="lackOfMaintenance">Lack Of Maintenance</string>
    <string name="lackOfQualityStaff">Lack Of Quality Staff</string>
    <string name="exorbitantPricing">Exorbitant Pricing</string>
    <string name="lackOfAwareness">Lack Of Awareness</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="send">Send</string>
    <string name="enableLocationServices">Enable Location Services</string>
    <string name="locationProvidersDisabled">Location providers not enabled. Would you like to enable them?</string>
    <string name="enable">Enable</string>
    <string name="chooseSystemLevel">Choose System Level</string>
    <string name="typeOfComplaint">Type of Complaint:</string>
</resources>